--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <div class="todo-container">
       <header>
-        <h1>To-do todo-list</h1>
+        <h1>To-do list</h1>
       </header>
       <form id="todo-form">
         <p>Adicione sua tarefa</p>
